platform/underlay/2-core/gateway-instance.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: ${PLATFORM_NAMESPACE}
spec:
  gatewayClassName: envoy-gateway-class
  listeners:
    - name: postgres-direct
      protocol: TLS
      port: 5432
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              oatlabs.oatmilk.work/gateway-access: "true"
      tls:
        mode: Passthrough
